--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -10,10 +10,11 @@
       <h1>Hola, Bienvenidos a mi primer E-Commerce</h1>
     </div>
     <div>
-        <p>Registrate en nuestro formulario <a href="form">formulario</a></p>
+        <p>Registrate en nuestro formulario <a href="/api/form">formulario</a></p>
     </div>
     <div>
-        <h2>Visita nuestros <a href="prods">productos</a></h2>
+        <h2>Visita nuestros <a href="/api/products">productos</a></h2>
     </div>
   </body>
+  <script src="../routes/product.router.js"></script>
 </html>
