--- a/src/views/prods.handlebars
+++ b/src/views/prods.handlebars
@@ -1,17 +1,21 @@
-<!DOCTYPE html>
+
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <h2>Estos son nuestros productos</h2>
+      <h2>Estos son nuestros productos</h2>
     </div>
     <div>
-        <h2>Volver al <a href="/">Inicio</a></h2>
+      <h2>Volver al <a href="/">Inicio</a></h2>
     </div>
-</body>
+    <div>
+        <h1>${products.id}</h1>
+    </div>
+  </body>
+  <script src="../routes/product.router.js"></script>
 </html>
